--- a/GamPr(1)/GamPr(1)/GamPr(1).vcxproj.filters
+++ b/GamPr(1)/GamPr(1)/GamPr(1).vcxproj.filters
@@ -21,7 +21,13 @@
     <ClCompile Include="케잌자르기.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="스타포스.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="난수.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="야구게임.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
