--- a/GamPr(1)/GamPr(1)/GamPr(1).vcxproj
+++ b/GamPr(1)/GamPr(1)/GamPr(1).vcxproj
@@ -133,7 +133,9 @@
     <ClCompile Include="난수.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="등차수열과등비수열.cpp" />
+    <ClCompile Include="등차수열과등비수열.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="숫자기억게임.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
