동적할당, 숫자퍼즐, 시간맞추기

--- a/GamPr(1)/GamPr(1)/GamPr(1).vcxproj.filters
+++ b/GamPr(1)/GamPr(1)/GamPr(1).vcxproj.filters
@@ -42,5 +42,11 @@
     <ClCompile Include="등차수열과등비수열.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="시간맞히기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="숫자퍼즐.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
