--- a/GamPr(1)/GamPr(1)/GamPr(1).vcxproj
+++ b/GamPr(1)/GamPr(1)/GamPr(1).vcxproj
@@ -142,7 +142,11 @@
     <ClCompile Include="숫자다루기.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="숫자퍼즐.cpp" />
     <ClCompile Include="스타포스.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="시간맞히기.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="야구게임.cpp">
