--- a/GamPr(1)/GamPr(1)/GamPr(1).vcxproj
+++ b/GamPr(1)/GamPr(1)/GamPr(1).vcxproj
@@ -136,7 +136,9 @@
     <ClCompile Include="등차수열과등비수열.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="빙고.cpp" />
+    <ClCompile Include="빙고.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="숫자기억게임.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
