--- a/GamPr(1)/GamPr(1)/GamPr(1).vcxproj.filters
+++ b/GamPr(1)/GamPr(1)/GamPr(1).vcxproj.filters
@@ -48,8 +48,22 @@
     <ClCompile Include="숫자퍼즐.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="빙고.cpp">
+    <ClCompile Include="05강산의빙고.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="함수선언정의.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="add.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="05선생님의빙고.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="add.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
