--- a/GamPr(1)/BomberMan/BomberMan.vcxproj
+++ b/GamPr(1)/BomberMan/BomberMan.vcxproj
@@ -127,8 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Main.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="console.cpp" />
+    <ClCompile Include="RealMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h" />
