--- a/GamPr(1)/BomberMan/BomberMan.vcxproj.filters
+++ b/GamPr(1)/BomberMan/BomberMan.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="console.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="RealMain.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
