--- a/GamPr(1)/BomberMan/BomberMan.vcxproj
+++ b/GamPr(1)/BomberMan/BomberMan.vcxproj
@@ -132,9 +132,12 @@
     </ClCompile>
     <ClCompile Include="console.cpp" />
     <ClCompile Include="RealMain.cpp" />
+    <ClCompile Include="StartScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h" />
+    <ClInclude Include="GameLogic.h" />
+    <ClInclude Include="StartScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
