--- a/GamPr(1)/BomberMan/BomberMan.vcxproj.filters
+++ b/GamPr(1)/BomberMan/BomberMan.vcxproj.filters
@@ -24,9 +24,18 @@
     <ClCompile Include="RealMain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="StartScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="StartScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GameLogic.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
