--- a/GamPr(1)/BomberMan/BomberMan.vcxproj.filters
+++ b/GamPr(1)/BomberMan/BomberMan.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="StartScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="GameLogic.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
