겜프 만든다아ㅏ앜

--- a/CardGame/CardGame/CardGame.vcxproj.filters
+++ b/CardGame/CardGame/CardGame.vcxproj.filters
@@ -11,6 +11,12 @@
     <Filter Include="Utills">
       <UniqueIdentifier>{db5e596a-6c55-4c66-a64d-9d11ee939dde}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Managers">
+      <UniqueIdentifier>{567d25d3-a003-4334-b096-5e8947e6bcde}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scene">
+      <UniqueIdentifier>{fa235811-5baa-4002-a924-bfe6b19875e5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameLogic.cpp">
@@ -22,6 +28,18 @@
     <ClCompile Include="console.cpp">
       <Filter>Utills</Filter>
     </ClCompile>
+    <ClCompile Include="SceneManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
+      <Filter>Utills</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="IngameScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameLogic.h">
@@ -32,6 +50,18 @@
     </ClInclude>
     <ClInclude Include="console.h">
       <Filter>Utills</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Utills</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="IngameScene.h">
+      <Filter>Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
