--- a/CardGame/CardGame/CardGame.vcxproj
+++ b/CardGame/CardGame/CardGame.vcxproj
@@ -129,12 +129,20 @@
   <ItemGroup>
     <ClCompile Include="console.cpp" />
     <ClCompile Include="GameLogic.cpp" />
+    <ClCompile Include="IngameScene.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="pch.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="GameLogic.h" />
+    <ClInclude Include="IngameScene.h" />
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="SceneManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
