--- a/CardGame/CardGame/CardGame.vcxproj.filters
+++ b/CardGame/CardGame/CardGame.vcxproj.filters
@@ -40,6 +40,12 @@
     <ClCompile Include="IngameScene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
+    <ClCompile Include="IntroScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="ExplainScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameLogic.h">
@@ -61,6 +67,12 @@
       <Filter>Scene</Filter>
     </ClInclude>
     <ClInclude Include="IngameScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="IntroScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="ExplainScene.h">
       <Filter>Scene</Filter>
     </ClInclude>
   </ItemGroup>
