--- a/2-3WinAPIGameProject/2-3WinAPIGameProject/2-3WinAPIGameProject.vcxproj.filters
+++ b/2-3WinAPIGameProject/2-3WinAPIGameProject/2-3WinAPIGameProject.vcxproj.filters
@@ -45,5 +45,8 @@
     <Image Include="2-3WinAPIGameProject.ico">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="..\VisualStudio.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
