--- a/2-3WinAPIGameProject/2-3WinAPIGameProject/2-3WinAPIGameProject.vcxproj
+++ b/2-3WinAPIGameProject/2-3WinAPIGameProject/2-3WinAPIGameProject.vcxproj
@@ -134,10 +134,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="2-3WinAPIGameProject.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="2강키보드마우스.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="2강키보드마우스.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="2-3WinAPIGameProject.rc" />
