--- a/2-3WinAPIGameProject/2023_winapi_framework(2-3)/2023_winapi_framework(2-3).vcxproj
+++ b/2-3WinAPIGameProject/2023_winapi_framework(2-3)/2023_winapi_framework(2-3).vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="BaseWindow.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="define.h" />
+    <ClInclude Include="enums.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="KeyMgr.h" />
     <ClInclude Include="Object.h" />
