--- a/2-3WinAPIGameProject/2023_winapi_framework(2-3)/2023_winapi_framework(2-3).vcxproj
+++ b/2-3WinAPIGameProject/2023_winapi_framework(2-3)/2023_winapi_framework(2-3).vcxproj
@@ -133,14 +133,17 @@
   <ItemGroup>
     <ClInclude Include="2023_winapi_framework(2-3).h" />
     <ClInclude Include="BaseWindow.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="enums.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Game_Scene.h" />
     <ClInclude Include="KeyMgr.h" />
+    <ClInclude Include="Monster.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneMgr.h" />
@@ -151,11 +154,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseWindow.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="Game_Scene.cpp" />
     <ClCompile Include="KeyMgr.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneMgr.cpp" />
     <ClCompile Include="Start_Scene.cpp" />
