--- a/2-3WinAPIGameProject/2023_winapi_framework(2-3)/2023_winapi_framework(2-3).vcxproj.filters
+++ b/2-3WinAPIGameProject/2023_winapi_framework(2-3)/2023_winapi_framework(2-3).vcxproj.filters
@@ -38,6 +38,9 @@
     <Filter Include="Engine\05. Scene\MainScene">
       <UniqueIdentifier>{200ec144-1179-4a1d-8def-56e99b49cb63}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\04. Object\MainObject">
+      <UniqueIdentifier>{46942904-3e51-4a0d-88ab-fc814b55f11a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2023_winapi_framework(2-3).h">
@@ -91,6 +94,15 @@
     <ClInclude Include="Game_Scene.h">
       <Filter>Engine\05. Scene\MainScene</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Engine\04. Object\MainObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Monster.h">
+      <Filter>Engine\04. Object\MainObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Bullet.h">
+      <Filter>Engine\04. Object\MainObject</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="2023_winapi_framework(2-3).rc">
@@ -138,6 +150,15 @@
     </ClCompile>
     <ClCompile Include="Game_Scene.cpp">
       <Filter>Engine\05. Scene\MainScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Engine\04. Object\MainObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Monster.cpp">
+      <Filter>Engine\04. Object\MainObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>Engine\04. Object\MainObject</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
